# CMakeCooking

./: .gitignore  APPLY.md  CHANGES.md  LICENSE  Makefile  README.md  UNDERSTAND.md  configure.sh  cooking.sh
lib/interaction/: abs_fpath.ml  abs_fpath.mli  cooking_interaction.ml  cooking_interaction.mli  dune  project.ml  project.mli  runner.ml  runner.mli
lib/model/: cooking_model.ml  cooking_model.mli  directed_graph.ml  directed_graph.mli  directed_graph_intf.ml  dune  recipe.ml  recipe.mli
lib/testing/: accounting.ml  accounting.mli  cooking_testing.ml  cooking_testing.mli  dune  test.ml  test.mli
pantry/apple/: CMakeLists.txt
pantry/apple/recipe/: dev.cmake
pantry/banana/: CMakeLists.txt
pantry/banana/recipe/: dev.cmake
pantry/banana/src/: apply.cc
pantry/carrot/: cooking.sh
pantry/carrot/include/carrot/: apply.hh
pantry/carrot/recipe/: dev.cmake
pantry/durian/: CMakeLists.txt
pantry/durian/cmake/: DurianConfig.cmake.in
pantry/egg/: CMakeLists.txt
pantry/egg/cmake/: EggConfig.cmake.in
pantry/egg/src/: apply.cc
test/integration/: cooking_test_integration.ml  dune
test/model/: cooking_test_model.ml  dune
test/pantry/apple/cmake/: AppleConfig.cmake.in
test/pantry/apple/recipe/: dev.cmake
test/pantry/apple/src/: main.cc
test/pantry/banana/: cooking.sh
test/pantry/banana/cmake/: BananaConfig.cmake.in
test/pantry/banana/include/banana/: apply.hh
test/pantry/banana/recipe/: dev.cmake
test/pantry/carrot/: CMakeLists.txt
test/pantry/carrot/cmake/: CarrotConfig.cmake.in
test/pantry/carrot/recipe/: dev.cmake
test/pantry/carrot/src/: apply.cc
test/pantry/durian/include/durian/: apply.hh
test/pantry/durian/src/: apply.cc
test/pantry/egg/include/egg/: apply.hh
